Fixed an alignment issue on the field layout designer

--- a/src/resources/css/source/cp.scss
+++ b/src/resources/css/source/cp.scss
@@ -216,12 +216,12 @@ $fldGuideColor: #f4f3fb;
 .fieldlayoutform .fld-tabs:after,
 .fieldlayoutform .unusedfields:after { @include clearafter; }
 
-.fieldlayoutform .buttons { @include margin(0, 0, 58px, 0); }
-.fieldlayoutform .buttons .btn.add { @include margin-right(15px); border: 1px solid $fldChalkColor; padding: 2px 10px 0; line-height: 27px; color: $fldChalkColor; background: transparent;
+.fieldlayoutform .newtabbtn-container { @include margin(0, 0, 58px, 0); }
+.fieldlayoutform .newtabbtn-container .btn.add { @include margin-right(15px); border: 1px solid $fldChalkColor; padding: 2px 10px 0; line-height: 27px; color: $fldChalkColor; background: transparent;
 	@include box-shadow(none);
 }
-.fieldlayoutform .buttons .btn.add:before { margin-top: -2px; }
-.fieldlayoutform .buttons h3 { margin: 0; display: inline-block; padding: 9px 6px; line-height: 15px; }
+.fieldlayoutform .newtabbtn-container .btn.add:before { margin-top: -2px; }
+.fieldlayoutform .newtabbtn-container h3 { margin: 0; display: inline-block; padding: 9px 6px; line-height: 15px; }
 
 .fld-tab { @include floatleft; @include margin(0, -1px, 30px, 30px); width: 211px; }
 
